--- a/requirements.txt
+++ b/requirements.txt
@@ -5,24 +5,33 @@ chardet==4.0.0
 click==7.1.2
 cryptography==3.4.6
 defusedxml==0.7.1
+diff-match-patch==20200713
 dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
 django-heroku==0.3.1
+django-import-export==2.5.0
 django-mathfilters==1.0.0
 djangorestframework==3.12.2
+et-xmlfile==1.0.1
 gensim==3.8.3
 idna==2.10
 joblib==1.0.1
 jsonfield2==4.0.0.post0
+MarkupPy==1.14
 nltk==3.5
 numpy==1.20.1
 oauthlib==3.1.0
+odfpy==1.4.1
+openpyxl==3.0.7
+pandas==1.2.3
 psycopg2==2.8.6
 pycparser==2.20
 PyJWT==2.0.1
+python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2021.1
+PyYAML==5.4.1
 regex==2021.3.17
 requests==2.25.1
 requests-oauthlib==1.3.0
@@ -30,6 +39,9 @@ scipy==1.6.2
 six==1.15.0
 smart-open==4.2.0
 sqlparse==0.4.1
+tablib==3.0.0
 tqdm==4.59.0
 urllib3==1.26.4
 whitenoise==5.2.0
+xlrd==2.0.1
+xlwt==1.3.0
